@@ -310,6 +310,8 @@ const MOption MP_VIEW_AUTOMATIC_WORDWRAP;
 const MOption MP_VIEW_WRAPMARGIN;
 const MOption MP_PLAIN_IS_TEXT;
 const MOption MP_RFC822_IS_TEXT;
+const MOption MP_RFC822_DECORATE;
+const MOption MP_RFC822_SHOW_HEADERS;
 const MOption MP_SHOW_XFACES;
 const MOption MP_INLINE_GFX;
 const MOption MP_INLINE_GFX_EXTERNAL;
@@ -729,6 +731,8 @@ static const MOptionData MOptions[] =
     DEFINE_OPTION(MP_VIEW_WRAPMARGIN),
     DEFINE_OPTION(MP_PLAIN_IS_TEXT),
     DEFINE_OPTION(MP_RFC822_IS_TEXT),
+    DEFINE_OPTION(MP_RFC822_DECORATE),
+    DEFINE_OPTION(MP_RFC822_SHOW_HEADERS),
     DEFINE_OPTION(MP_SHOW_XFACES),
     DEFINE_OPTION(MP_INLINE_GFX),
     DEFINE_OPTION(MP_INLINE_GFX_EXTERNAL),
