@@ -9,6 +9,7 @@
 Release 0.68 '' September xx, 2007
 ---------------------------------------
 
+2008-05-04 VZ: Improve the display of the embedded messages.
 2008-05-04 VZ: Allow toggling tool/status bars and showing full-screen.
 2008-05-02 VZ: Add support for server-side spam filters.
 2008-04-25 VZ: Add support for filtering on individual headers to the GUI.
